--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     <a href="#contact">Contact</a>
   </nav>
   <section class="company-info" style="margin: 3rem 0; padding: 2rem; background: #ffffff; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-  <h2 style="text-align: center; color: #004a99; margin-bottom: 1.5rem;">À propos de l’entreprise</h2>
+  <h2 style="text-align: center; color: #000; margin-bottom: 1.5rem;">À propos de l’entreprise</h2>
   <p style="font-size: 1rem; line-height: 1.6; color: #333;">
     <strong>Nom de l’entreprise :</strong> Cixi Bisheng Electrical Appliances Co., Ltd.<br />
     <strong>Numéro d’enregistrement :</strong> 91330282MA293MM481<br />
@@ -350,7 +350,7 @@
   </p>
 </section>
   <section class="legal" style="background:#fff; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
-  <h2 style="color:#004a99; text-align:center; margin-bottom:1rem;">Mentions légales</h2>
+  <h2 style="color:#000; text-align:center; margin-bottom:1rem;">Mentions légales</h2>
   <p><strong>Raison sociale :</strong> Cixi Bisheng Electrical Appliances Co., Ltd.</p>
   <p><strong>Représentant légal :</strong> Cen Liehui</p>
   <p><strong>Adresse :</strong> No. 1015, rue Guanfu, village Donghai, Fuhai Town, Ningbo, Zhejiang, Chine</p>
@@ -366,7 +366,7 @@
   <a href="#legal">Mentions légales</a>
 </nav>
   <section class="privacy-policy" style="background:#fff; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
-  <h2 style="color:#004a99; text-align:center; margin-bottom:1rem;">Politique de confidentialité</h2>
+  <h2 style="color:#000; text-align:center; margin-bottom:1rem;">Politique de confidentialité</h2>
   <p>
     Nous recueillons certaines informations personnelles lors de votre visite sur notre site, notamment via le formulaire de contact ou lors d’un achat.  
     Ces données peuvent inclure votre nom, adresse email, numéro de téléphone, ou données de navigation.
