--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     <strong>Pays :</strong> Chine
   </p>
 </section>
-  <section class="legal" style="background:#fff; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+  <section class="legal" style="background:#ffffff; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
   <h2 style="color:#000; text-align:center; margin-bottom:1rem;">Mentions légales</h2>
   <p><strong>Raison sociale :</strong> Cixi Bisheng Electrical Appliances Co., Ltd.</p>
   <p><strong>Représentant légal :</strong> Cen Liehui</p>
@@ -359,7 +359,7 @@
   <p><strong>Téléphone :</strong> +86 183 5743 6614</p>
 </section>
 </nav>
-  <section class="privacy-policy" style="background:#fff; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+  <section class="privacy-policy" style="background:#ffffff; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
   <h2 style="color:#000; text-align:center; margin-bottom:1rem;">Politique de confidentialité</h2>
   <p>
     Nous recueillons certaines informations personnelles lors de votre visite sur notre site, notamment via le formulaire de contact ou lors d’un achat.  
