--- a/index.html
+++ b/index.html
@@ -330,59 +330,44 @@
 
 <footer>
   <p>&copy; 2025 MATAJIR CORELINKS - Tous droits réservés</p>
+
   <nav style="margin-top: 0.5rem;">
     <a href="#home">Accueil</a> |
     <a href="#products">Produits</a> |
-    <a href="#contact">Contact</a>
+    <a href="#contact">Contact</a> |
+    <a href="#privacy-policy">Politique de confidentialité</a> |
+    <a href="#legal">Mentions légales</a>
   </nav>
-  <section class="company-info" style="margin: 3rem 0; padding: 2rem; background: #ffffff; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-  <h2 style="text-align: center; color: #000; margin-bottom: 1.5rem;">À propos de l’entreprise</h2>
-  <p style="font-size: 1rem; line-height: 1.6; color: #333;">
-    <strong>Nom de l’entreprise :</strong> Cixi Bisheng Electrical Appliances Co., Ltd.<br />
-    <strong>Numéro d’enregistrement :</strong> 91330282MA293MM481<br />
-    <strong>Date de création :</strong> 23 août 2017<br />
-    <strong>Date d’expiration :</strong> 22 août 2047<br />
-    <strong>Capital social :</strong> 1 000 000 RMB<br />
-    <strong>Forme juridique :</strong> Société à responsabilité limitée (investie ou contrôlée par une personne physique)<br />
-    <strong>Représentant légal :</strong> Cen Liehui<br />
-    <strong>Adresse :</strong> No. 1015, rue Guanfu, village Donghai, ville de Fuhai, Ningbo, Zhejiang, Chine<br />
-    <strong>Pays :</strong> Chine
-  </p>
-</section>
-  <section class="legal" style="background:#ffffff; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
-  <h2 style="color:#000; text-align:center; margin-bottom:1rem;">Mentions légales</h2>
-  <p><strong>Raison sociale :</strong> Cixi Bisheng Electrical Appliances Co., Ltd.</p>
-  <p><strong>Représentant légal :</strong> Cen Liehui</p>
-  <p><strong>Adresse :</strong> No. 1015, rue Guanfu, village Donghai, Fuhai Town, Ningbo, Zhejiang, Chine</p>
-  <p><strong>Numéro d'enregistrement :</strong> 91330282MA293MM481</p>
-  <p><strong>Email :</strong> <a href="mailto:zane@bisheng168.com">zane@bisheng168.com</a></p>
-  <p><strong>Téléphone :</strong> +86 183 5743 6614</p>
-</section>
-</nav>
-  <section class="privacy-policy" style="background:#ffffff; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
-  <h2 style="color:#000; text-align:center; margin-bottom:1rem;">Politique de confidentialité</h2>
-  <p>
-    Nous recueillons certaines informations personnelles lors de votre visite sur notre site, notamment via le formulaire de contact ou lors d’un achat.  
-    Ces données peuvent inclure votre nom, adresse email, numéro de téléphone, ou données de navigation.
-  </p>
-  <p>
-    Les informations collectées sont utilisées uniquement pour répondre à vos demandes, traiter vos commandes ou améliorer votre expérience utilisateur.
-    Nous ne partageons jamais vos données avec des tiers non autorisés.
-  </p>
-  <p>
-    Notre site peut utiliser des cookies ou des technologies similaires pour mesurer l'audience ou optimiser le contenu, conformément à la réglementation en vigueur.
-  </p>
-  <p>
-    Conformément à la loi, vous avez le droit d’accéder, de modifier ou de supprimer vos données personnelles. Pour toute demande, contactez-nous à
-    <a href="mailto:zane@bisheng168.com">zane@bisheng168.com</a>.
-  </p>
-</section>
-<nav style="margin-top: 1rem;">
-  <a href="#home">Accueil</a> |
-  <a href="#products">Produits</a> |
-  <a href="#contact">Contact</a> |
-  <a href="#privacy-policy">Politique de confidentialité</a> |
-  <a href="#legal">Mentions légales</a>
+
+  <section id="legal" class="legal" style="background:#ffffff; color:#000; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+    <h2 style="text-align:center; margin-bottom:1rem;">Mentions légales</h2>
+    <p><strong>Raison sociale :</strong> Cixi Bisheng Electrical Appliances Co., Ltd.</p>
+    <p><strong>Représentant légal :</strong> Cen Liehui</p>
+    <p><strong>Adresse :</strong> No. 1015, rue Guanfu, village Donghai, Fuhai Town, Ningbo, Zhejiang, Chine</p>
+    <p><strong>Numéro d'enregistrement :</strong> 91330282MA293MM481</p>
+    <p><strong>Email :</strong> <a href="mailto:zane@bisheng168.com" style="color:#004a99;">zane@bisheng168.com</a></p>
+    <p><strong>Téléphone :</strong> +86 183 5743 6614</p>
+  </section>
+
+  <section id="privacy-policy" class="privacy-policy" style="background:#ffffff; color:#000; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+    <h2 style="text-align:center; margin-bottom:1rem;">Politique de confidentialité</h2>
+    <p>
+      Nous recueillons certaines informations personnelles lors de votre visite sur notre site, notamment via le formulaire de contact ou lors d’un achat.
+      Ces données peuvent inclure votre nom, adresse email, numéro de téléphone ou données de navigation.
+    </p>
+    <p>
+      Les informations collectées sont utilisées uniquement pour répondre à vos demandes, traiter vos commandes ou améliorer votre expérience utilisateur.
+      Nous ne partageons jamais vos données avec des tiers non autorisés.
+    </p>
+    <p>
+      Notre site peut utiliser des cookies ou des technologies similaires pour mesurer l'audience ou optimiser le contenu.
+    </p>
+    <p>
+      Conformément à la loi, vous avez le droit d’accéder, de modifier ou de supprimer vos données personnelles.
+      Pour toute demande, contactez-nous à
+      <a href="mailto:zane@bisheng168.com" style="color:#004a99;">zane@bisheng168.com</a>.
+    </p>
+  </section>
 </footer>
 
 </body>
