--- a/index.html
+++ b/index.html
@@ -359,14 +359,25 @@
       <a href="mailto:zane@bisheng168.com" style="color:#004a99;">zane@bisheng168.com</a>.
     </p>
   </section>
+  <section id="shipping-returns">
+  <h2>Politique d’expédition et de retours</h2>
+  <h3>Expédition</h3>
+  <p>Nous livrons dans tout le Maroc sous 2 à 5 jours ouvrables.</p>
+  <h3>Retours</h3>
+  <p>Les retours sont acceptés sous 7 jours pour les produits défectueux ou non conformes.</p>
+  <p>Contact : <a href="mailto:zane@bisheng168.com" style="color:#004a99;">zane@bisheng168.com</a></p>
+</section>
+  
     <p>&copy; 2025 MATAJIR CORELINKS - Tous droits réservés</p>
 
-  <nav style="margin-top: 0.5rem;">
+  <nav>
     <a href="#home">Accueil</a> |
     <a href="#products">Produits</a> |
     <a href="#contact">Contact</a> |
-    <a href="#privacy-policy">Politique de confidentialité</a> |
-    <a href="#legal">Mentions légales</a>
+    <a href="#about">À propos</a> |
+    <a href="#legal">Mentions légales</a> |
+    <a href="#privacy-policy">Confidentialité</a> |
+    <a href="#shipping-returns">Expédition & Retours</a>
   </nav>
 </footer>
 
